# pd-cli

./: AGENTS.md  Cargo.toml  LICENSE
.playdate-docs/: json.md  playdate.md  print.md  table.md
.playdate-docs/playdate/: accelerometer.md  datastore.md  device.md  easingFunctions.md  input.md  lifecycle.md  math.md  network.md  string.md
.playdate-docs/playdate-docs/: AGENTS.md  class.md  profiling.md
.playdate-docs/playdate-docs/playdate/: display.md  file.md  frameTimer.md  geometry.md  graphics.md  input.md  inputhandlers.md  keyboard.md  menu.md  mirror.md  pathfinder.md  profiling.md  scoreboards.md  settings.md  simulator.md  sound.md  time.md  timer.md  ui.md
.playdate-docs/playdate-docs/playdate/geometry/: affineTransform.md  arc.md  point.md  rect.md  size.md  vector2D.md
.playdate-docs/playdate-docs/playdate/graphics/: font.md  imagetable.md  perlin.md  sprite.md
.playdate-docs/playdate-docs/playdate/sound/: bitcrusher.md  controlsignal.md  instrument.md  micinput.md  overdrive.md  ringmod.md  sampleplayer.md  (+3 more)
.playdate-docs/playdate/geometry/: lineSegment.md  polygon.md
.playdate-docs/playdate/graphics/: animation.md  animator.md  font.md  image.md  nineSlice.md  qrcode.md  tilemap.md  video.md
.playdate-docs/playdate/sound/: channel.md  delayline.md  delaylinetap.md  envelope.md  fileplayer.md  lfo.md  onepolefilter.md  sample.md  sequence.md  signalvalue.md  track.md  twopolefilter.md
src/: cli.rs  command.rs  device.rs  main.rs  screenshot.rs  stats.rs  usb.rs  version.rs
src/platform/: linux.rs  macos.rs  mod.rs  unix.rs  windows.rs
