[package]
name = "peed"
version = "0.1.0"
edition = "2024"

[[bin]]
name = "pd"
path = "src/main.rs"

[dependencies]
nusb = "0.2"
libc = "0.2"
image = { version = "0.25", default-features = false, features = ["png", "gif"] }
clap = { version = "4.5", features = ["derive"] }

[target.'cfg(target_os = "macos")'.dependencies]
core-foundation-sys = "0.8"
io-kit-sys = "0.4"
